...
        android:focusable="false"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial"
        android:text="@string/error_text"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/edittext_usernameEmployee"
        app:layout_constraintTop_toTopOf="@+id/edittext_usernameEmployee" />

    <EditText
        android:id="@+id/monthError"
        android:layout_width="14dp"
        android:layout_height="42dp"
...
        android:focusable="false"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial"
        android:text="@string/error_text"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_monthEmployee"
        app:layout_constraintEnd_toStartOf="@+id/edittext_monthEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edittext_monthEmployee"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
...
        android:focusable="false"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial"
        android:text="@string/error_text"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_dayEmployee"
        app:layout_constraintEnd_toStartOf="@+id/edittext_dayEmployee" />

    <EditText
        android:id="@+id/yearError"
        android:layout_width="14dp"
        android:layout_height="42dp"
...
        android:focusable="false"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial"
        android:text="@string/error_text"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_yearEmployee"
        app:layout_constraintEnd_toStartOf="@+id/edittext_yearEmployee"
        app:layout_constraintTop_toTopOf="@+id/edittext_yearEmployee" />

    <EditText
        android:id="@+id/passwordError"
        android:layout_width="14dp"
...
        android:focusable="false"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial"
        android:text="@string/error_text"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_passwordEmployee"
        app:layout_constraintEnd_toStartOf="@+id/edittext_passwordEmployee"
        app:layout_constraintTop_toTopOf="@+id/edittext_passwordEmployee" />

    <EditText
        android:id="@+id/emailError"
        android:layout_width="14dp"
...
        android:focusable="false"
        android:inputType="textPersonName"
        android:fontFamily="@font/questrial"
        android:text="@string/error_text"
        android:textColor="#FF0000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_emailEmployee"
        app:layout_constraintEnd_toStartOf="@+id/edittext_emailEmployee"
        app:layout_constraintTop_toBottomOf="@+id/textview_emailEmployee" />

    <TextView
        android:id="@+id/textview_employeeSignUp"
        android:layout_width="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_monthEmployee" />


    <Button
        android:id="@+id/button_signUpEmployee"
        style="@style/Widget.App.Button"
        android:layout_width="204dp"
        android:layout_height="68dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/questrial"
...
