<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_viewtasksEmployer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen"
    tools:context=".EmployerHomepageActivity">

    <TextView
        android:id="@+id/textview_quickCash5"
        android:layout_width="347dp"
        android:layout_height="76dp"
        android:background="#0E2133"
        android:backgroundTint="#0e2133"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="@string/quick_cash"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

        <Button
            android:id="@+id/button_homepageSubmitTask"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="65sp"
            android:background="#000000"
            android:backgroundTint="#00D3A9"
            android:fontFamily="@font/questrial"
            android:text="@string/employer_create_task"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_quickCash5"
            app:layout_constraintVertical_bias="0.289"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="3sp" />

        <Button
            android:id="@+id/button_viewApplications"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="65sp"
            android:background="#000000"
            android:backgroundTint="#00D3A9"
            android:fontFamily="@font/questrial"
            android:text="@string/employer_view_applications"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_homepageSubmitTask"
            app:layout_constraintVertical_bias="0.0"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="3sp" />

        <Button
            android:id="@+id/button_viewMyTasksEmployer"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="65sp"
            android:background="#000000"
            android:backgroundTint="#00D3A9"
            android:fontFamily="@font/questrial"
            android:text="@string/employer_view_completed_tasks"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_viewApplications"
            app:layout_constraintVertical_bias="0.0"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="3sp" /><![CDATA[

        app:layout_constraintVertical_bias="0.811" />

        ]]>

        <Button
            android:id="@+id/button_switchviewsEmployer"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="80sp"
            android:background="#000000"
            android:backgroundTint="#00D3A9"
            android:fontFamily="@font/questrial"
            android:text="@string/employer_switch_views"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toTopOf="@+id/button_homepageSubmitTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_quickCash5"
            app:layout_constraintVertical_bias="1.0"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="3sp" />

</androidx.constraintlayout.widget.ConstraintLayout>