<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen"
    tools:context=".EmployeeHomepageActivity">

    <TextView
        android:id="@+id/textview_quickCash7"
        android:layout_width="347dp"
        android:layout_height="76dp"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="@string/quick_cash"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" /><![CDATA[

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_switchviewsEmployee" />

        ]]>

        <Button
            android:id="@+id/button_viewtasks"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="80sp"
            android:layout_marginTop="12dp"
            android:background="#000000"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/questrial"
            android:text="@string/employee_view_apply_tasks"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_viewAcceptedTasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_switchviewsEmployee"
            app:layout_constraintVertical_bias="0.033"
            app:strokeColor="#00D3A9"
            app:strokeWidth="3sp" />

        <Button
            android:id="@+id/button_viewAcceptedTasks"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="80sp"
            android:background="#000000"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/questrial"
            android:text="@string/employee_view_tasks_progress"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toTopOf="@+id/button_ViewMaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_viewtasks"
            app:strokeColor="#00D3A9"
            app:strokeWidth="3sp" /><![CDATA[

        app:layout_constraintTop_toBottomOf="@+id/button_viewAcceptedTasks"
        app:layout_constraintVertical_bias="0.274" />

        ]]>

        <Button
            android:id="@+id/button_ViewMaps"
            style="@style/Widget.App.Button"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/questrial"
            android:text="View Maps"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_viewtasks"
            app:layout_constraintVertical_bias="0.325"
            app:strokeColor="#00D3A9"
            app:strokeWidth="3sp" />

    <Button
        android:id="@+id/button_switchviewsEmployee"
        style="@style/Widget.App.Button"
        android:layout_width="302dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/questrial"
        android:text="Switch to Employer View"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash7"
        app:layout_constraintVertical_bias="0.092"
        app:strokeColor="#00D3A9"
        app:strokeWidth="3sp" />
        android:background="#000000"
        android:backgroundTint="#001973"
        android:text="@string/employee_switch_views"
        android:textColor="#FFFFFF"
        android:textSize="16sp"


</androidx.constraintlayout.widget.ConstraintLayout>